--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "purgecss-webpack-plugin": "^1.6.0",
     "sass-loader": "^8.0.0",
+    "ssri": "^8.0.1",
     "style-loader": "^1.0.0",
     "tailwindcss": "^1.1.2",
     "vue-js-modal": "^1.3.31",
